public/css/style.css
#resultsContainer {
    display: inline-block;
    margin-left: 500px;
    width: 80%;
    height: 100%;
    padding: 0;
}
#mainBody {
    height: 650px;
}
.row {
    margin: 0;
    height: 100%;
}
.container {
    max-width: 100%;
}
#loginMenu {
    margin-left: 80%;
    width: 20%;
}
#newTripMenu {
    margin-left: 89%;
    width: 10%;
}
#map {
    display: block;
    height: 100%;
    margin: 0 auto 10px auto;
}
#startCity {
    margin-bottom: 10px;
}
#tripDistance {
    display: block; 
    margin: 0 auto;
    height: 500px;
}
.incorrect {
    padding: 0 40% 0 0;
    display: none;
    color: red;
}
#stepToggle {
    margin: -5px;
}
#signedIn {
    display: none;
}
#newTrip {
    display: none;
}
#loginDiv {
    display: none;
}
#signupDiv {
    display: none;
}
.modalTitle {
    width: 30%;
    margin-right: 0;
    display: inline-block;
}
button {
    margin: 0 5px;
}
#weatherTable {
    width:100%;
    height: 100%;
    overflow: hidden;
}
.tableDisplay {
    border: 1px solid black;
    padding: 0;
    height: 400px;
}
.resultToggleDiv{
    width:100%;
    height: 40px;
}
.resultToggle{
    display: inline-block;
    margin: 0;
    width: 49%;
    height: 100%;
    background-color: grey;
}
.childDisplay{
    height: 100%;
    width: 100%;
    overflow-y: scroll;
    padding-right: 17px;
    box-sizing: content-box;
}
.parentDisplay {
height: 400px;
padding: 5px;
width: 100%;
overflow: hidden;
}
.toggleTitle {
    height: 40px;
    text-align: center;
    margin-top: 0;
    font-size: 25px;
}
td {
    font-size: 11px;
}
.selected {
    border: 2px solid black;
    font-weight: bold;
}
#searchDiv {
    position: fixed;
    width: 500px;
    height: 100%;
    margin-right: 0;
    background-color: #68BDEA;
}
.searchInner {
    width: 90%;
    margin: 0 auto 0 auto;
    padding: 15px 0 10px 0;
    border-bottom: 1px solid grey;
}
#startCity {
    width: 100%;
}
#endCity {
    width: 100%;
}
.resultsInner {
    width: 90%;
    margin: 0 auto;
    padding: 0;
    border: 1px solid black;
    height: 100%;
}
.teal-color {
    background-color: #68BDEA;
}
h4 {
    color: grey;
}
.navbar-brand {
    color: grey;
}
label {
    color: grey;
}
body {
    background-color: #D3D3D3;
}
.btn {
    background-color: #D3D3D3;
    color: white;
}

